--- a/assets1/css/theme-4.css
+++ b/assets1/css/theme-4.css
@@ -19,7 +19,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  color: #50c8c9;
+  color: #1e6162;
 }
 
 a {
