--- a/assets1/css/theme-4.css
+++ b/assets1/css/theme-4.css
@@ -216,7 +216,7 @@ pre code {
 .promo {
   background: #50c8c9;
   color: #fff;
-  padding-top: 150px;
+  padding-top: 120px;
 }
 
 .promo .title {
@@ -231,7 +231,7 @@ pre code {
 
 .promo .intro {
   font-size: 28px;
-  max-width: 680px;
+  max-width: 800px;
   margin: 0 auto;
   margin-bottom: 30px;
 }
@@ -278,7 +278,7 @@ pre code {
 
 /* ======= About Section ======= */
 .about {
-  padding: 80px 0;
+  padding: 40px 0;
   background: #f5f5f5;
 }
 
@@ -299,6 +299,13 @@ pre code {
   margin-bottom: 30px;
 }
 
+.about p {
+      font-size:1.2rem; 
+      font-weight:400; 
+      text-align:justify; 
+      line-height:30px;
+      }
+ 
 .about .item .icon-holder {
   position: absolute;
   left: 30px;
