--- a/assets1/css/theme-4.css
+++ b/assets1/css/theme-4.css
@@ -299,7 +299,7 @@ pre code {
   margin-bottom: 30px;
 }
 
-.about p {
+.about h2 p {
       font-size:1.2rem; 
       font-weight:400; 
       text-align:justify; 
