--- a/assets/css/pillar-1.css
+++ b/assets/css/pillar-1.css
@@ -64,7 +64,7 @@ html {
 }
 
 .venue-tag {
-    background-color: #027193;
+    background-color: #58677c;
     color: #fefefe;
     border-radius: 3px;
     padding: 1px 2px;
